OPEN - task 5: Handle spaces in path to Eclipse application http://github.com/turesheim/eclipse-utilities/issues/issue/5